# novelgraph

./: .env.example  .gitignore  README.md  app.py  pyproject.toml
docs/: APP_GUIDE.md  graph_debug.html  run_history.jsonl
scripts/: chat_cli.py  debug_novelty.py  inspect_db.py  main.py  smoke_test.py
src/novelgraph/: __init__.py  agents.py  chat.py  config.py  eval.py  evidence.py  graph_store.py  hypothesis.py  ingest.py  novelty.py  pdf_preprocess.py  pipeline.py  run_history.py  schema.py  search_utils.py  temporal.py
